Fixed cropping

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@
 
   .each-slide-effect > div {
     height: 270px !important;
-    margin-top:50px;    
+    margin-top:0px;    
   }
   /* PROJECTS */
   .projects_content {
